Change the way we handle auto margins on blocks with outer width (excluding auto margins) wider than their containing block.  Use rules equivalent to overconstraint handling (margins non-auto) so that we depend on 'direction' rather than on which margins are 'auto'.  b=185411  r=roc  sr=bzbarsky